tests/paczka1/small_fuzzy/59155892.err
Error in line 2: 7cB9b3axIn A951 16,5
Error in line 6: A464 A464 89,1
Error in line 10: A464 S322 95,9
Error in line 12: 7cB9b3axIn A464 71,84
